 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 *
 * CHANGELOG version: $Id$
 */

VERSION 2.1.1
	[marcelo vanzin]
		- set the viewer in PVActions.pvActionWrapper() also when forcing
		  executing of the action. It might still be null, though.
		- don't mess up the DockableWindowManager by calling setVisible(true)
		  on the PV windows; execute the "Open Project Viewer" action instead.
		- changes to the build file suggested by the packagers.
		- fix problems in external app config pane
		- show some error dialogs for more critical errors (bug 1191408)
		- don't allow renaming the directories on disk
		- Mozilla doesn't like paths with backslashes, so always
		  use normal slashes when launching a web browser.
		- fix NPE in ContextOptionPane caused by hitting "OK" with an empty
		  selection.
		- added OkCancelButtons class to make it easy to add buttons to an
		  EnhancedDialog instance.
		- new GlobFilter (generic version of ImportSettingsFilter).
		- new importer dialog: avoid two dialogs popping up in succession
		  by having all the other options below the JFileChooser UI, and
		  add some other options such as custom filters and "flattening"
		  of paths.

VERSION 2.1.0
	[marcelo vanzin]
		This version provides some API incompatibilities with other versions,
		so the version number is being bumped up a little bit.

		Feature changes:
		- dropped jEdit 4.1 compatibility (with related code cleanups)
		- clean up inactive projects when switching from "All Projects" view
		- use directory name as project name when creating project, if no
		  name has been provided
		- use current project's root's parent (or buffer path) as default path
		  when creating new project
		- option to automatically import newly created files that are under